完成adb界面构建

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -85,6 +85,8 @@
     </Compile>
     <Compile Include="DataService\AppDataServiceImpl.cs" />
     <Compile Include="DataService\IAppDataService.cs" />
+    <Compile Include="Utils\ArgumentCreator.cs" />
+    <Compile Include="Utils\CommandExecutor.cs" />
     <Compile Include="ViewModels\AndroidDebugBridgeViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\AndroidDebugBridgeView.xaml.cs">
