完成设备详情获取以及数据绑定功能

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -87,6 +87,7 @@
     <Compile Include="DataService\IAppDataService.cs" />
     <Compile Include="Utils\ArgumentCreator.cs" />
     <Compile Include="Utils\CommandExecutor.cs" />
+    <Compile Include="Utils\MethodExtensions.cs" />
     <Compile Include="ViewModels\AndroidDebugBridgeViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\AndroidDebugBridgeView.xaml.cs">
