--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -85,18 +85,28 @@
     </Compile>
     <Compile Include="DataService\AppDataServiceImpl.cs" />
     <Compile Include="DataService\IAppDataService.cs" />
+    <Compile Include="Dialogs\CreateKeyDialog.xaml.cs">
+      <DependentUpon>CreateKeyDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\LoadingDialog.xaml.cs">
       <DependentUpon>LoadingDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Events\CloseLoadingDialogEvent.cs" />
+    <Compile Include="Models\ApkFileModel.cs" />
     <Compile Include="Utils\ArgumentCreator.cs" />
     <Compile Include="Utils\CommandExecutor.cs" />
     <Compile Include="Utils\MethodExtensions.cs" />
+    <Compile Include="Utils\PasswordAttachAttribute.cs" />
     <Compile Include="ViewModels\AndroidDebugBridgeViewModel.cs" />
+    <Compile Include="ViewModels\ApplicationPackageViewModel.cs" />
+    <Compile Include="ViewModels\CreateKeyDialogViewModel.cs" />
     <Compile Include="ViewModels\LoadingDialogViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\AndroidDebugBridgeView.xaml.cs">
       <DependentUpon>AndroidDebugBridgeView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ApplicationPackageView.xaml.cs">
+      <DependentUpon>ApplicationPackageView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -119,13 +129,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Resource Include="Fonts\iconfont.ttf" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Dialogs\CreateKeyDialog.xaml" />
     <Page Include="Dialogs\LoadingDialog.xaml" />
     <Page Include="Themes\DarkTheme.xaml" />
     <Page Include="Themes\LightTheme.xaml" />
     <Page Include="Views\AndroidDebugBridgeView.xaml" />
+    <Page Include="Views\ApplicationPackageView.xaml" />
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
