--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -94,6 +94,7 @@
     </Compile>
     <Compile Include="Events\CloseLoadingDialogEvent.cs" />
     <Compile Include="Models\ApkFileModel.cs" />
+    <Compile Include="Models\MainMenuModel.cs" />
     <Compile Include="Utils\ArgumentCreator.cs" />
     <Compile Include="Utils\CommandExecutor.cs" />
     <Compile Include="Utils\MethodExtensions.cs" />
