--- a/DevKit/packages.config
+++ b/DevKit/packages.config
@@ -19,6 +19,10 @@
   <package id="Prism.Core" version="8.1.97" targetFramework="net48" />
   <package id="Prism.DryIoc" version="8.1.97" targetFramework="net48" />
   <package id="Prism.Wpf" version="8.1.97" targetFramework="net48" />
+  <package id="SQLitePCLRaw.bundle_green" version="2.1.2" targetFramework="net48" />
+  <package id="SQLitePCLRaw.core" version="2.1.2" targetFramework="net48" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.1.2" targetFramework="net48" />
+  <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.1.2" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net48" />
@@ -27,4 +31,5 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="sqlite-net-pcl" version="1.9.172" targetFramework="net48" />
 </packages>
