--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -161,6 +161,8 @@
     <Compile Include="Cache\ApkConfigCache.cs" />
     <Compile Include="Cache\CommandExtensionCache.cs" />
     <Compile Include="Cache\TcpClientConfigCache.cs" />
+    <Compile Include="Converters\MessageTagBgConverter.cs" />
+    <Compile Include="Converters\MessageTypeConverter.cs" />
     <Compile Include="DataService\AppDataServiceImpl.cs" />
     <Compile Include="DataService\IAppDataService.cs" />
     <Compile Include="Dialogs\CreateKeyDialog.xaml.cs">
