--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Models\MessageModel.cs" />
     <Compile Include="Models\MainMenuModel.cs" />
     <Compile Include="Utils\ArgumentCreator.cs" />
+    <Compile Include="Utils\AutoScrollToBottomBehavior.cs" />
     <Compile Include="Utils\CommandExecutor.cs" />
     <Compile Include="Utils\DataBaseConnection.cs" />
     <Compile Include="Utils\DelegateAggregator.cs" />
