--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Utils\SocketBase\ByteArrayDecoder.cs" />
     <Compile Include="Utils\SocketBase\ByteArrayEncoder.cs" />
     <Compile Include="Utils\TcpClient.cs" />
+    <Compile Include="Utils\ConnectionType.cs" />
     <Compile Include="ViewModels\AndroidDebugBridgeViewModel.cs" />
     <Compile Include="ViewModels\ApplicationPackageViewModel.cs" />
     <Compile Include="ViewModels\CreateKeyDialogViewModel.cs" />
