预设指令列表的添加右键删除功能

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -172,6 +172,7 @@
       <DependentUpon>LoadingDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Events\CloseLoadingDialogEvent.cs" />
+    <Compile Include="Events\DrawerExecuteCommandEvent.cs" />
     <Compile Include="Models\ApkFileModel.cs" />
     <Compile Include="Models\MessageModel.cs" />
     <Compile Include="Models\MainMenuModel.cs" />
