调整TCP、UDP客户端界面

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -200,6 +200,7 @@
     <Compile Include="ViewModels\LoadingDialogViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\TcpCommunicateViewModel.cs" />
+    <Compile Include="ViewModels\UdpCommunicateViewModel.cs" />
     <Compile Include="Views\AndroidDebugBridgeView.xaml.cs">
       <DependentUpon>AndroidDebugBridgeView.xaml</DependentUpon>
     </Compile>
@@ -212,6 +213,9 @@
     </Compile>
     <Compile Include="Views\TcpCommunicateView.xaml.cs">
       <DependentUpon>TcpCommunicateView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UdpCommunicateView.xaml.cs">
+      <DependentUpon>UdpCommunicateView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -246,6 +250,7 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\TcpCommunicateView.xaml" />
+    <Page Include="Views\UdpCommunicateView.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\launcher.ico" />
