--- a/DevKit/packages.config
+++ b/DevKit/packages.config
@@ -2,11 +2,13 @@
 <packages>
   <package id="DotNetty.Buffers" version="0.7.6" targetFramework="net48" />
   <package id="DotNetty.Codecs" version="0.7.6" targetFramework="net48" />
+  <package id="DotNetty.Codecs.Http" version="0.7.6" targetFramework="net48" />
   <package id="DotNetty.Common" version="0.7.6" targetFramework="net48" />
   <package id="DotNetty.Handlers" version="0.7.6" targetFramework="net48" />
   <package id="DotNetty.Transport" version="0.7.6" targetFramework="net48" />
   <package id="DryIoc.dll" version="4.7.7" targetFramework="net48" />
   <package id="HandyControl" version="3.5.1" targetFramework="net48" />
+  <package id="Libuv" version="1.10.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net48" />
@@ -14,6 +16,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="Prism.Core" version="8.1.97" targetFramework="net48" />
