--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -205,7 +205,7 @@
     <Compile Include="ViewModels\ExCommandDialogViewModel.cs" />
     <Compile Include="ViewModels\LoadingDialogViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
-    <Compile Include="ViewModels\SerialPortViewModel.cs" />
+    <Compile Include="ViewModels\SerialPortCommunicateViewModel.cs" />
     <Compile Include="ViewModels\TcpCommunicateViewModel.cs" />
     <Compile Include="ViewModels\UdpCommunicateViewModel.cs" />
     <Compile Include="ViewModels\WebSocketCommunicateViewModel.cs" />
@@ -222,8 +222,8 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Views\SerialPortView.xaml.cs">
-      <DependentUpon>SerialPortView.xaml</DependentUpon>
+    <Compile Include="Views\SerialPortCommunicateView.xaml.cs">
+      <DependentUpon>SerialPortCommunicateView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\TcpCommunicateView.xaml.cs">
       <DependentUpon>TcpCommunicateView.xaml</DependentUpon>
@@ -267,7 +267,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Views\SerialPortView.xaml" />
+    <Page Include="Views\SerialPortCommunicateView.xaml" />
     <Page Include="Views\TcpCommunicateView.xaml" />
     <Page Include="Views\UdpCommunicateView.xaml" />
     <Page Include="Views\WebSocketCommunicateView.xaml" />
