--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -197,9 +197,10 @@
     <Compile Include="Utils\Socket\Base\ByteArrayDecoder.cs" />
     <Compile Include="Utils\ConnectionType.cs" />
     <Compile Include="Utils\Socket\Base\ByteArrayEncoder.cs" />
-    <Compile Include="Utils\Socket\TcpClient.cs" />
-    <Compile Include="Utils\Socket\UdpClient.cs" />
-    <Compile Include="Utils\Socket\WebSocketClient.cs" />
+    <Compile Include="Utils\Socket\Client\TcpClient.cs" />
+    <Compile Include="Utils\Socket\Client\UdpClient.cs" />
+    <Compile Include="Utils\Socket\Client\WebSocketClient.cs" />
+    <Compile Include="Utils\Socket\Server\TcpServer.cs" />
     <Compile Include="ViewModels\AndroidDebugBridgeViewModel.cs" />
     <Compile Include="ViewModels\ApplicationPackageViewModel.cs" />
     <Compile Include="ViewModels\CreateKeyDialogViewModel.cs" />
