--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Cache\ApkConfigCache.cs" />
     <Compile Include="Cache\CommandExtensionCache.cs" />
     <Compile Include="Cache\ClientConfigCache.cs" />
+    <Compile Include="Converters\ListenStateConverter.cs" />
     <Compile Include="Converters\MessageTagBgConverter.cs" />
     <Compile Include="Converters\MessageTypeConverter.cs" />
     <Compile Include="DataService\AppDataServiceImpl.cs" />
