--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -211,11 +211,13 @@
     <Compile Include="ViewModels\ApplicationPackageViewModel.cs" />
     <Compile Include="ViewModels\CreateKeyDialogViewModel.cs" />
     <Compile Include="ViewModels\ExCommandDialogViewModel.cs" />
+    <Compile Include="ViewModels\GenerateIconViewModel.cs" />
     <Compile Include="ViewModels\LoadingDialogViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\SerialPortCommunicateViewModel.cs" />
     <Compile Include="ViewModels\TcpClientMessageDialogViewModel.cs" />
     <Compile Include="ViewModels\TcpCommunicateViewModel.cs" />
+    <Compile Include="ViewModels\TranslationViewModel.cs" />
     <Compile Include="ViewModels\UdpCommunicateViewModel.cs" />
     <Compile Include="ViewModels\WebSocketCommunicateViewModel.cs" />
     <Compile Include="Views\AndroidDebugBridgeView.xaml.cs">
@@ -227,6 +229,9 @@
     <Compile Include="Views\ExCommandWindow.xaml.cs">
       <DependentUpon>ExCommandWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\GenerateIconView.xaml.cs">
+      <DependentUpon>GenerateIconView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -236,6 +241,9 @@
     </Compile>
     <Compile Include="Views\TcpCommunicateView.xaml.cs">
       <DependentUpon>TcpCommunicateView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\TranslationView.xaml.cs">
+      <DependentUpon>TranslationView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\UdpCommunicateView.xaml.cs">
       <DependentUpon>UdpCommunicateView.xaml</DependentUpon>
@@ -271,12 +279,14 @@
     <Page Include="Views\AndroidDebugBridgeView.xaml" />
     <Page Include="Views\ApplicationPackageView.xaml" />
     <Page Include="Views\ExCommandWindow.xaml" />
+    <Page Include="Views\GenerateIconView.xaml" />
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\SerialPortCommunicateView.xaml" />
     <Page Include="Views\TcpCommunicateView.xaml" />
+    <Page Include="Views\TranslationView.xaml" />
     <Page Include="Views\UdpCommunicateView.xaml" />
     <Page Include="Views\WebSocketCommunicateView.xaml" />
   </ItemGroup>
