--- a/DevKit/packages.config
+++ b/DevKit/packages.config
@@ -17,6 +17,7 @@
   <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net48" />
+  <package id="Microsoft.Web.WebView2" version="1.0.2903.40" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="Prism.Core" version="8.1.97" targetFramework="net48" />
