--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Models\ApkFileModel.cs" />
     <Compile Include="Models\MessageModel.cs" />
     <Compile Include="Models\MainMenuModel.cs" />
+    <Compile Include="Models\PlatformImageTypeModel.cs" />
     <Compile Include="Models\TcpClientModel.cs" />
     <Compile Include="Utils\ArgumentCreator.cs" />
     <Compile Include="Utils\AutoScrollToBottomBehavior.cs" />
