--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -198,6 +198,8 @@
     <Compile Include="Events\ExecuteExCommandEvent.cs" />
     <Compile Include="Models\ApkFileModel.cs" />
     <Compile Include="Models\AsciiCodeModel.cs" />
+    <Compile Include="Models\ColorModel.cs" />
+    <Compile Include="Models\GradientColorModel.cs" />
     <Compile Include="Models\MessageModel.cs" />
     <Compile Include="Models\MainMenuModel.cs" />
     <Compile Include="Models\PlatformImageTypeModel.cs" />
