--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Cache\ApkConfigCache.cs" />
     <Compile Include="Cache\CommandExtensionCache.cs" />
     <Compile Include="Cache\ClientConfigCache.cs" />
+    <Compile Include="Converters\ColorTagForegroundConverter.cs" />
     <Compile Include="Converters\ListenStateConverter.cs" />
     <Compile Include="Converters\MessageCountConverter.cs" />
     <Compile Include="Converters\MessageTagBgConverter.cs" />
