--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -172,6 +172,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Cache\ApkConfigCache.cs" />
+    <Compile Include="Cache\ColorResourceCache.cs" />
     <Compile Include="Cache\CommandExtensionCache.cs" />
     <Compile Include="Cache\ClientConfigCache.cs" />
     <Compile Include="Converters\ColorHexArrayConverter.cs" />
