--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -197,6 +197,7 @@
       <DependentUpon>TcpClientMessageDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Events\CloseLoadingDialogEvent.cs" />
+    <Compile Include="Events\TcpClientMessageEvent.cs" />
     <Compile Include="Models\ApkFileModel.cs" />
     <Compile Include="Models\AsciiCodeModel.cs" />
     <Compile Include="Models\ColorModel.cs" />
