删除多余文件

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Events\CloseLoadingDialogEvent.cs" />
     <Compile Include="Events\TcpClientMessageEvent.cs" />
     <Compile Include="Events\TcpServerMessageEvent.cs" />
+    <Compile Include="Events\UdpClientMessageEvent.cs" />
     <Compile Include="Models\ApkFileModel.cs" />
     <Compile Include="Models\AsciiCodeModel.cs" />
     <Compile Include="Models\ColorModel.cs" />
@@ -222,10 +223,7 @@
     <Compile Include="Utils\PasswordAttachAttribute.cs" />
     <Compile Include="Utils\RuntimeCache.cs" />
     <Compile Include="Utils\SerialPortKit.cs" />
-    <Compile Include="Utils\Socket\Base\ByteArrayDecoder.cs" />
     <Compile Include="Utils\ConnectionType.cs" />
-    <Compile Include="Utils\Socket\Base\ByteArrayEncoder.cs" />
-    <Compile Include="Utils\Socket\Client\UdpClient.cs" />
     <Compile Include="Utils\Socket\Client\WebSocketClient.cs" />
     <Compile Include="ViewModels\AndroidDebugBridgeViewModel.cs" />
     <Compile Include="ViewModels\ApplicationPackageViewModel.cs" />
