--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -323,6 +323,9 @@
   <ItemGroup>
     <Analyzer Include="..\packages\TouchSocket.Core.3.0.6\analyzers\dotnet\cs\TouchSocket.Core.SourceGenerator.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\empty.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Web.WebView2.1.0.2903.40\build\Microsoft.Web.WebView2.targets" Condition="Exists('..\packages\Microsoft.Web.WebView2.1.0.2903.40\build\Microsoft.Web.WebView2.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
